--- a/configure.in
+++ b/configure.in
@@ -32,6 +32,13 @@ CPPFLAGS="$CPPFLAGS $ATLAS_CFLAGS"
 CXXFLAGS="$CXXFLAGS $ATLAS_CFLAGS"
 LIBS="$LIBS $ATLAS_LIBS"
 
+AM_PATH_SIGC(1.0.2,[
+	CPPFLAGS="$CPPFLAGS $SIGC_CFLAGS"
+	LDFLAGS="$LDFLAGS $SIGC_LIBS"
+	],
+	AC_MSG_ERROR(Couldn't find libsigc++ config [or config failed])
+)
+
 AC_CHECK_LIB(dl,main)
 AC_CHECK_LIB(pthread,main)
 
