--- a/configure.in
+++ b/configure.in
@@ -36,7 +36,7 @@ AM_PATH_SIGC(1.0.2,[
 	CPPFLAGS="$CPPFLAGS $SIGC_CFLAGS"
 	LDFLAGS="$LDFLAGS $SIGC_LIBS"
 	],
-	AC_MSG_ERROR(Couldn't find libsigc++ config [or config failed])
+	AC_MSG_ERROR(Couldn't find libsigc++ config or config failed)
 )
 
 AC_CHECK_LIB(dl,main)
