Saturday, January 26 2002, James Turner <jmtn@blueyonder.co.uk>
	* configure.in checks for skstream2 using the AM_PATH_SKSTREAM
	  macro
	* Updated ClientConnection.cpp to use skstream2, and also to
	  take full advanatge of the skstream setup code to handle
	  all the socket stuff
	* Remove client_fd from ClientConnection, and change all
	  access to use getSocket() on the socket_stream.

--- a/configure.in
+++ b/configure.in
@@ -117,7 +117,13 @@ LIBS="$LIBS $PYTHON_LIBS"
 dnl ... done with python checks
 dnl -----------------------------------------------------------------
 
-AC_CHECK_LIB(skstream,main)
+dnl Check for libskstream library
+AM_PATH_SKSTREAM(0.2.1, [
+	CFLAGS="$CFLAGS $SKSTREAM_CFLAGS"
+	CXXFLAGS="$CXXFLAGS $SKSTREAM_CFLAGS"
+	LIBS="$LIBS $SKSTREAM_LIBS"],
+	AC_MSG_ERROR(Couldn't find skstream or version is insufficent)
+)
 
 dnl Generate files
 AC_OUTPUT([
