Saturday, May 11, James Turner
	* added acinclude.m4
	* Now require CppUnit to compile certain tests (not linked in yet,
	  but soon). The long term goal is to be able to integrate process
	  into a WorldForge-wide automated test system based on the CppUnit
	  and JUnit XML output.
	* Moved the validator logic out into a seperate file
	* Added some new behaviour to ClientConnection, to handle
	  'unexpected' (but correct) operations better. The other
	  upshot is that process will be much stricter about
	  refno / serialno setting for tests that use the new logic.
	* Moved one OOG test into a seperate file, converted it to
	  use CppUnit, the new ClientConnecton methods and the
	  seperate validator.
	* Updated TODO so I don't forget to test various things

	All of the above is compiled but not actually called, till I
	decide how to integrate the ClientConnections. Should be done
	tomorrow, then I'll move over more tests and start adding new
	ones.

--- a/configure.in
+++ b/configure.in
@@ -118,15 +118,28 @@ dnl ... done with python checks
 dnl -----------------------------------------------------------------
 
 dnl Check for libskstream library
-AM_PATH_SKSTREAM(0.2.1, [
+AM_PATH_SKSTREAM(0.2.2, [
 	CFLAGS="$CFLAGS $SKSTREAM_CFLAGS"
 	CXXFLAGS="$CXXFLAGS $SKSTREAM_CFLAGS"
 	LIBS="$LIBS $SKSTREAM_LIBS"],
 	AC_MSG_ERROR(Couldn't find skstream or version is insufficent)
 )
 
+AM_PATH_CPPUNIT(1.6.1,
+    [
+	CFLAGS="$CFLAGS $CPPUNIT_CFLAGS"
+	CXXFLAGS="$CXXFLAGS $CPPUNIT_CFLAGS"
+	LIBS="$LIBS $CPPUNIT_LIBS"
+    ], [
+	AC_MSG_ERROR(Couldn't Find CppUnit)
+    ]
+)
+
+
 dnl Generate files
 AC_OUTPUT([
 	Makefile
 	src/Makefile
 ])
+
+
