--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -5,6 +5,9 @@ INCLUDES = $(GNOME_XML_CFLAGS)
 process_SOURCES = \
 		  pythonInterface.cpp pythonInterface.h \
 		  ClientConnection.cpp ClientConnection.h \
-                  process.cpp
+                  process.cpp \
+		  validator.cpp validator.h \
+		  testOOG.cpp testOOG.h \
+		  atlasUtils.cpp
 
 process_LDADD =
