--- a/configure.in
+++ b/configure.in
@@ -63,22 +63,27 @@ dnl
 dnl if found define HAVE_PYTHON_H
 dnl
 
-AC_CHECK_HEADER(python2.1/Python.h,
-	[ python_include_path=-I${python_prefix}/include/python2.1
-	  python_version=python2.1
+AC_CHECK_HEADER(python2.2/Python.h,
+	[ python_include_path=-I${python_prefix}/include/python2.2
+	  python_version=python2.2
         ],[
-	AC_CHECK_HEADER(python2.0/Python.h,
-		[ python_include_path=-I${python_prefix}/include/python2.0
-		  python_version=python2.0
-                ],[
-		AC_CHECK_HEADER(python1.6/Python.h, 
-			[ python_include_path=-I${python_prefix}/include/python1.6
-			  python_version=python1.6
-                        ],[
-			AC_CHECK_HEADER(python1.5/Python.h, 
-				[ python_include_path=-I${python_prefix}/include/python1.5
-				  python_version=python1.5
-                                ])
+	AC_CHECK_HEADER(python2.1/Python.h,
+		[ python_include_path=-I${python_prefix}/include/python2.1
+		  python_version=python2.1
+       		],[
+		AC_CHECK_HEADER(python2.0/Python.h,
+			[ python_include_path=-I${python_prefix}/include/python2.0
+			  python_version=python2.0
+			],[
+			AC_CHECK_HEADER(python1.6/Python.h, 
+				[ python_include_path=-I${python_prefix}/include/python1.6
+				  python_version=python1.6
+        	                ],[
+				AC_CHECK_HEADER(python1.5/Python.h, 
+					[ python_include_path=-I${python_prefix}/include/python1.5
+					  python_version=python1.5
+	                                ])
+				])
 			])
 		])
 	])
@@ -94,20 +99,23 @@ python_lib_path=${python_prefix}/lib/${python_version}/config
 
 dnl check for libpythonx.y
 dnl if found define HAVE_PYTHON_LIB 
-dnl
-AC_CHECK_LIB(python2.1, Py_Initialize, 
-	[ python_libs="-L${python_lib_path} -lpython2.1 -lutil"	  
-	],[
-	AC_CHECK_LIB(python2.0, Py_Initialize, 
-		[ python_libs="-L${python_lib_path} -lpython2.0 -lutil"	  
+AC_CHECK_LIB(python2.2, Py_Initialize, 
+	[ python_libs="-L${python_lib_path} -lpython2.2 -lutil"	  
+	],[nl
+	AC_CHECK_LIB(python2.1, Py_Initialize, 
+		[ python_libs="-L${python_lib_path} -lpython2.1 -lutil"	  
 		],[
-		AC_CHECK_LIB(python1.6, Py_Initialize, 
-			[ python_libs="-L${python_lib_path} -lpython1.6"
+		AC_CHECK_LIB(python2.0, Py_Initialize, 
+			[ python_libs="-L${python_lib_path} -lpython2.0 -lutil"	  
 			],[
-			AC_CHECK_LIB(python1.5, Py_Initialize, 
-				[ python_libs="-L${python_lib_path} -lpython1.5"
-				],,-L${python_lib_path})
-			],-L${python_lib_path})
+			AC_CHECK_LIB(python1.6, Py_Initialize, 
+				[ python_libs="-L${python_lib_path} -lpython1.6"
+				],[
+				AC_CHECK_LIB(python1.5, Py_Initialize, 
+					[ python_libs="-L${python_lib_path} -lpython1.5"
+					],,-L${python_lib_path})
+				],-L${python_lib_path})
+			],-L${python_lib_path} -lutil)
 		],-L${python_lib_path} -lutil)
 	],-L${python_lib_path} -lutil)
 
