--- a/configure.in
+++ b/configure.in
@@ -39,9 +39,6 @@ AM_PATH_SIGC(1.0.2,[
 	AC_MSG_ERROR(Couldn't find libsigc++ config or config failed)
 )
 
-AC_CHECK_LIB(dl,main)
-AC_CHECK_LIB(pthread,main)
-
 dnl allow the user to provide the directory where python is installed in
 dnl
 AC_CACHE_CHECK(for location of python, python_prefix,
@@ -59,8 +56,6 @@ AC_CACHE_CHECK(for location of python, python_prefix,
 dnl then check for the header file Python.h and set
 dnl python_include_path and python_version
 dnl appropriately to what we have found
-dnl
-dnl if found define HAVE_PYTHON_H
 dnl
 
 AC_CHECK_HEADER(python2.2/Python.h,
@@ -88,36 +83,22 @@ AC_CHECK_HEADER(python2.2/Python.h,
 		])
 	])
 
+AC_CHECK_LIB(dl,main)
+AC_CHECK_LIB(pthread,main)
 
-				
 PYTHON_INCLUDES=${python_include_path}
 CPPFLAGS="$CPPFLAGS ${PYTHON_INCLUDES}"
-CXXFLAGS="$CXXFLAGS ${PYTHON_INCLUDES}"
 
 dnl build the library path from the found version
 python_lib_path=${python_prefix}/lib/${python_version}/config
 
-dnl check for libpythonx.y
-dnl if found define HAVE_PYTHON_LIB 
-AC_CHECK_LIB(python2.2, Py_Initialize, 
-	[ python_libs="-L${python_lib_path} -lpython2.2 -lutil"	  
-	],[nl
-	AC_CHECK_LIB(python2.1, Py_Initialize, 
-		[ python_libs="-L${python_lib_path} -lpython2.1 -lutil"	  
-		],[
-		AC_CHECK_LIB(python2.0, Py_Initialize, 
-			[ python_libs="-L${python_lib_path} -lpython2.0 -lutil"	  
-			],[
-			AC_CHECK_LIB(python1.6, Py_Initialize, 
-				[ python_libs="-L${python_lib_path} -lpython1.6"
-				],[
-				AC_CHECK_LIB(python1.5, Py_Initialize, 
-					[ python_libs="-L${python_lib_path} -lpython1.5"
-					],,-L${python_lib_path})
-				],-L${python_lib_path})
-			],-L${python_lib_path} -lutil)
-		],-L${python_lib_path} -lutil)
-	],-L${python_lib_path} -lutil)
+AC_CHECK_LIB(${python_version},
+    Py_Initialize,
+    [
+        python_libs="-L${python_lib_path} -l${python_version} -lutil"
+    ],,
+    [-L${python_lib_path} -lutil]
+)
 
 PYTHON_LIBS=${python_libs}
 LIBS="$LIBS $PYTHON_LIBS"
