2002-08-14  Al Riddoch  <ajr@ecs.soton.ac.uk>
	* src/gobshite.cpp: Added a new test client, that talks and talks,
	  but just won't listen.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,4 @@
-bin_PROGRAMS = process
+bin_PROGRAMS = process gobshite
 
 INCLUDES = $(GNOME_XML_CFLAGS)
 
@@ -11,3 +11,6 @@ process_SOURCES = \
 		  atlasUtils.cpp
 
 process_LDADD =
+
+gobshite_SOURCES = gobshite.cpp \
+                   ClientConnection.cpp ClientConnection.h
