--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,7 @@
 dnl Initialise autoconf
 
 AC_INIT(src/process.cpp)
+AM_CONFIG_HEADER(config.h)
 
 dnl Initialise automake
 
@@ -15,10 +16,7 @@ dnl Test for C++ compiler
 AC_PROG_CC
 AC_PROG_CXX
 
-CFLAGS="$CFLAGS -Wall -g"
-CXXFLAGS="$CXXFLAGS -Wall -g"
-
-AC_PREFIX_DEFAULT("/usr/local")
+CXXFLAGS="$CXXFLAGS -Wall"
 
 AC_LANG_CPLUSPLUS
 AC_REQUIRE_CPP
@@ -27,17 +25,14 @@ dnl Test for WorldForge Atlas Libraries
 
 ATLAS_VERSION=0.4.4
 AM_PATH_ATLAS($ATLAS_VERSION)
-CFLAGS="$CFLAGS $ATLAS_CFLAGS"
 CPPFLAGS="$CPPFLAGS $ATLAS_CFLAGS"
-CXXFLAGS="$CXXFLAGS $ATLAS_CFLAGS"
 LIBS="$LIBS $ATLAS_LIBS"
 
-AM_PATH_SIGC(1.0.2,[
-	CPPFLAGS="$CPPFLAGS $SIGC_CFLAGS"
-	LDFLAGS="$LDFLAGS $SIGC_LIBS"
-	],
+AM_PATH_SIGC(1.0.2, ,
 	AC_MSG_ERROR(Couldn't find libsigc++ config or config failed)
 )
+CPPFLAGS="$CPPFLAGS $SIGC_CFLAGS"
+LDFLAGS="$LDFLAGS $SIGC_LIBS"
 
 dnl allow the user to provide the directory where python is installed in
 dnl
@@ -107,22 +102,19 @@ dnl ... done with python checks
 dnl -----------------------------------------------------------------
 
 dnl Check for libskstream library
-AM_PATH_SKSTREAM(0.2.2, [
-	CFLAGS="$CFLAGS $SKSTREAM_CFLAGS"
-	CXXFLAGS="$CXXFLAGS $SKSTREAM_CFLAGS"
-	LIBS="$LIBS $SKSTREAM_LIBS"],
+AM_PATH_SKSTREAM(0.2.2, ,
 	AC_MSG_ERROR(Couldn't find skstream or version is insufficent)
 )
+CPPFLAGS="$CPPFLAGS $SKSTREAM_CFLAGS"
+LIBS="$LIBS $SKSTREAM_LIBS"
 
-AM_PATH_CPPUNIT(1.6.1,
+AM_PATH_CPPUNIT(1.6.1, ,
     [
-	CFLAGS="$CFLAGS $CPPUNIT_CFLAGS"
-	CXXFLAGS="$CXXFLAGS $CPPUNIT_CFLAGS"
-	LIBS="$LIBS $CPPUNIT_LIBS"
-    ], [
 	AC_MSG_ERROR(Couldn't Find CppUnit)
     ]
 )
+CPPFLAGS="$CPPFLAGS $CPPUNIT_CFLAGS"
+LIBS="$LIBS $CPPUNIT_LIBS"
 
 
 dnl Generate files
