--- a/.cvsignore
+++ b/.cvsignore
@@ -1,11 +1,14 @@
 aclocal.m4
+autom4te-*.cache
 config.cache
 config.guess
+config.h
 config.h.in
 config.log
 config.status
 config.sub
 configure
+depcomp
 install-sh
 libtool
 ltconfig
@@ -15,3 +18,4 @@ Makefile.in
 missing
 mkinstalldirs
 *.pyc
+stamp-h1
