--- a/configure.in
+++ b/configure.in
@@ -7,13 +7,8 @@ dnl Initialise automake
 
 AM_INIT_AUTOMAKE(process, 0.0.0)
 
-dnl Need libtool
-
-AM_PROG_LIBTOOL
-
 dnl Test for C++ compiler
 
-AC_PROG_CC
 AC_PROG_CXX
 
 CXXFLAGS="$CXXFLAGS -Wall"
@@ -32,7 +27,7 @@ AM_PATH_SIGC(1.0.2, ,
 	AC_MSG_ERROR(Couldn't find libsigc++ config or config failed)
 )
 CPPFLAGS="$CPPFLAGS $SIGC_CFLAGS"
-LDFLAGS="$LDFLAGS $SIGC_LIBS"
+LIBS="$LIBS $SIGC_LIBS"
 
 dnl allow the user to provide the directory where python is installed in
 dnl
@@ -122,5 +117,3 @@ AC_OUTPUT([
 	Makefile
 	src/Makefile
 ])
-
-
