--- a/configure.in
+++ b/configure.in
@@ -18,16 +18,14 @@ AC_REQUIRE_CPP
 
 dnl Test for WorldForge Atlas Libraries
 
-ATLAS_VERSION=0.4.4
-AM_PATH_ATLAS($ATLAS_VERSION)
-CPPFLAGS="$CPPFLAGS $ATLAS_CFLAGS"
-LIBS="$LIBS $ATLAS_LIBS"
-
-AM_PATH_SIGC(1.0.2, ,
-	AC_MSG_ERROR(Couldn't find libsigc++ config or config failed)
-)
-CPPFLAGS="$CPPFLAGS $SIGC_CFLAGS"
-LIBS="$LIBS $SIGC_LIBS"
+PKG_CHECK_MODULES(WF, skstream-0.2 >= 0.2.4 atlascpp-0.4 >= 0.4.5 ,
+    [
+        CPPFLAGS="$CPPFLAGS $WF_CFLAGS"
+        LIBS="$LIBS $WF_LIBS"
+    ],
+    [
+        AC_MSG_ERROR(Couldn't find WF libs.)
+    ])
 
 dnl allow the user to provide the directory where python is installed in
 dnl
@@ -96,21 +94,17 @@ LIBS="$LIBS $PYTHON_LIBS"
 dnl ... done with python checks
 dnl -----------------------------------------------------------------
 
-dnl Check for libskstream library
-AM_PATH_SKSTREAM(0.2.2, ,
-	AC_MSG_ERROR(Couldn't find skstream or version is insufficent)
-)
-CPPFLAGS="$CPPFLAGS $SKSTREAM_CFLAGS"
-LIBS="$LIBS $SKSTREAM_LIBS"
-
-AM_PATH_CPPUNIT(1.6.1, ,
+AM_PATH_CPPUNIT(1.6.1,
     [
+	CFLAGS="$CFLAGS $CPPUNIT_CFLAGS"
+	CPPFLAGS="$CPPFLAGS $CPPUNIT_CFLAGS"
+	LIBS="$LIBS $CPPUNIT_LIBS"
+    ], [
 	AC_MSG_ERROR(Couldn't Find CppUnit)
     ]
 )
 CPPFLAGS="$CPPFLAGS $CPPUNIT_CFLAGS"
 LIBS="$LIBS $CPPUNIT_LIBS"
-
 
 dnl Generate files
 AC_OUTPUT([
