--- a/.cvsignore
+++ b/.cvsignore
@@ -1,5 +1,5 @@
 aclocal.m4
-autom4te-*.cache
+autom4te*.cache
 config.cache
 config.guess
 config.h
@@ -18,4 +18,4 @@ Makefile.in
 missing
 mkinstalldirs
 *.pyc
-stamp-h1
+stamp-h*
