2003-08-08  Al Riddoch  <ajr@ecs.soton.ac.uk>
	* Port whole codebase to Atlas-C++ 0.6 API.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,12 +1,13 @@
 bin_PROGRAMS = process gobshite
 
 process_SOURCES = \
-		  pythonInterface.cpp pythonInterface.h \
 		  ClientConnection.cpp ClientConnection.h \
 		  process.cpp process_debug.h opfwd.h debug.h \
 		  validator.cpp validator.h \
 		  testOOG.cpp testOOG.h \
 		  atlasUtils.cpp atlasUtils.h
+
+#		  pythonInterface.cpp pythonInterface.h
 
 gobshite_SOURCES = gobshite.cpp \
                    ClientConnection.cpp ClientConnection.h
