2003-08-21  Al Riddoch  <ajr@ecs.soton.ac.uk>
	* Switch to skstream-0.3, which is effectively a null change.

--- a/configure.in
+++ b/configure.in
@@ -18,7 +18,7 @@ AC_REQUIRE_CPP
 
 dnl Test for WorldForge Atlas Libraries
 
-PKG_CHECK_MODULES(WF, skstream-0.3 >= 0.2.4 atlascpp-0.6 ,
+PKG_CHECK_MODULES(WF, skstream-0.3 atlascpp-0.6 ,
     [
         CPPFLAGS="$CPPFLAGS $WF_CFLAGS"
         LIBS="$LIBS $WF_LIBS"
