--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -5,9 +5,9 @@ process_SOURCES = \
 		  process.cpp process_debug.h opfwd.h debug.h \
 		  validator.cpp validator.h \
 		  testOOG.cpp testOOG.h \
+		  pythonInterface.cpp pythonInterface.h \
 		  atlasUtils.cpp atlasUtils.h
 
-#		  pythonInterface.cpp pythonInterface.h
 
 gobshite_SOURCES = gobshite.cpp \
                    ClientConnection.cpp ClientConnection.h
