2003-10-30  Al Riddoch  <ajr@ecs.soton.ac.uk>
	* src/testOOG.h, src/testOOG.cpp: Re-purpose files to contain
	  OOG Look and Talk test code copied from main().

	* tests.cpp, tests.h, src/testIG.h, src/testIG.cpp: Move IG
	  tests from tests.cpp to their own file.

	* src/process.cpp: Remove OOG Look and Talk tests, and use the
	  function version.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,11 +3,10 @@ bin_PROGRAMS = process gobshite
 process_SOURCES = \
 		  ClientConnection.cpp ClientConnection.h \
 		  process.cpp process_debug.h opfwd.h debug.h \
-		  validator.cpp validator.h \
 		  testOOG.cpp testOOG.h \
 		  tests.cpp tests.h \
-		  pythonInterface.cpp pythonInterface.h \
-		  atlasUtils.cpp atlasUtils.h
+		  testIG.cpp testIG.h \
+		  pythonInterface.cpp pythonInterface.h
 
 
 gobshite_SOURCES = gobshite.cpp \
