2003-10-30  Al Riddoch  <ajr@ecs.soton.ac.uk>
	* src/testLogin.h, src/testLogin.cpp, src/process.cpp:
	  Move login code into its own file.

	* src/testCharacter.h: Fix guard names.

	* src/tests.h, src/tests.cpp: Change testLogout() API as we don't
	  need to pass in the account name.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -5,6 +5,7 @@ process_SOURCES = \
 		  process.cpp process_debug.h opfwd.h debug.h \
 		  testOOG.cpp testOOG.h \
 		  tests.cpp tests.h \
+		  testLogin.cpp testLogin.h \
 		  testCharacter.cpp testCharacter.h \
 		  testIG.cpp testIG.h \
 		  pythonInterface.cpp pythonInterface.h
