2004-02-27  Al Riddoch  <ajr@ecs.soton.ac.uk>
	* src/ClientConnection.cpp, src/ClientConnection.h,
	  src/process.cpp, src/pythonInterface.cpp, src/pythonInterface.h,
	  src/testCharacter.cpp, src/testIG.cpp, src/testLogin.cpp,
	  src/testOOG.cpp, src/tests.cpp: Update to use the latest
	  Atlas-C++ API, using the new flag to enforce use of the new
	  typedefs.

--- a/configure.in
+++ b/configure.in
@@ -16,7 +16,7 @@ dnl Test for C++ compiler
 
 AC_PROG_CXX
 
-CXXFLAGS="$CXXFLAGS -Wall"
+CXXFLAGS="$CXXFLAGS -Wall -DATLAS_ELEMENT_TYPEDEF_PRIVATE"
 
 AC_LANG_CPLUSPLUS
 AC_REQUIRE_CPP
