--- a/configure.in
+++ b/configure.in
@@ -16,7 +16,7 @@ dnl Test for C++ compiler
 
 AC_PROG_CXX
 
-CXXFLAGS="$CXXFLAGS -Wall -DATLAS_ELEMENT_TYPEDEF_PRIVATE"
+CXXFLAGS="$CXXFLAGS -Wall -Wno-unknown-pragmas -DATLAS_ELEMENT_TYPEDEF_PRIVATE"
 
 AC_LANG_CPLUSPLUS
 AC_REQUIRE_CPP
