2005-05-02  Al Riddoch  <ajr@ecs.soton.ac.uk>
	* perf/minserver.cpp, perf/rawclient.cpp: New tools to test server
	  raw performance.

--- a/configure.ac
+++ b/configure.ac
@@ -125,6 +125,7 @@ dnl Generate files
 AC_CONFIG_FILES([
         Makefile
         src/Makefile
+        perf/Makefile
         loadtool/Makefile
 ])
 AC_OUTPUT
