2006-01-10  Al Riddoch  <ajr@ecs.soton.ac.uk>
	* src/gobshite.cpp, src/process.cpp: Remove Atlas spec loading,
	  as its not required.

	* src/bint.cpp: Add a new test for clients which disconnect without
	  reading.

	* src/testCharacter.cpp: Add some more character creation tests.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,4 @@
-bin_PROGRAMS = process gobshite
+bin_PROGRAMS = process gobshite bint
 
 process_SOURCES = \
 		  ClientConnection.cpp ClientConnection.h \
@@ -13,3 +13,6 @@ process_SOURCES = \
 
 gobshite_SOURCES = gobshite.cpp \
                    ClientConnection.cpp ClientConnection.h
+
+bint_SOURCES = bint.cpp \
+               ClientConnection.cpp ClientConnection.h
