2008-11-07  Al Riddoch  <alriddoch@googlemail.com>
	* src/Makefile.am: Make sure the necessary include paths are
	  available.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,5 +1,7 @@
 bin_PROGRAMS = process gobshite bint
 
+INCLUDES = -I${top_builddir}
+
 process_SOURCES = \
 		  ClientConnection.cpp ClientConnection.h \
 		  process.cpp process_debug.h opfwd.h \
